# CanvasGuesser

./: .replit  Jenkinsfile  Procfile  app.py  main.py  pyproject.toml  readme.md  requirements.txt
main/templates/: head.html
templates/: createpage.html  game.html  head.html
web/: app.py  docker-compose.yml  dockerfile  requirements.txt
web/templates/: createpage.html  error.html  game.html  index.html
webgraf/: main.py  settings.json
webgraf/templates/: base.html  game.html  index.html
